--- a/unit1_projects/stylesheets/dbcblog_styling.css
+++ b/unit1_projects/stylesheets/dbcblog_styling.css
@@ -25,6 +25,20 @@ padding-left: 75px;
 font-weight: 600; 
 }
 
+#nav {
+	margin:25px;
+	font-family: Franklin Gothic Medium, sans-serif; 
+	margin-left: 50px;
+}
+
+#next {
+	margin-left: 37.5%;
+}
+
+#prev {
+	margin-right: 37.5%;
+}
+
 #content{
 	width:75%;
 	margin-left: 50px; 
@@ -47,7 +61,10 @@ font-weight: 600;
 	width: 75%; 
 }
 #content_text{
-	text-align: center; 
+	text-align: center;
+	width: 90%;  
+	margin-left: 50px;
+	line-height: 1.25em; 
 }
 
 h5{
@@ -55,8 +72,8 @@ h5{
 	text-align: left; 
 }
 #content_text p{
-	margin:10px 0px 10px 0px; 
-	text-align: left; 
+	margin:15px 0px 15px 0px; 
+	text-align: justify; 
 
 }
 
@@ -71,7 +88,3 @@ h5{
 	padding: 0px 30px;
 }
 
-/*Temporary*/
-#links{
-	margin-top: 40px; 
-}
